# rust_retrieval_engine

./: .dockerignore:  .gitignore  Cargo.toml  Dockerfile  README.md
src/: index.rs  logger.rs  main.rs  models.rs  schema.rs  search.rs  server.rs
