[package]
name = "rust_retrieval_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
